package life;

option go_package = "github.com/Nashluffy/aqualog";

service Life {
  rpc GetByID(GetByIDRequest) returns (GetByIDResponse) {}
}

message GetByIDRequest {
  required int32 id = 1;
}

message GetByIDResponse {
  optional string name = 1;
  optional string comments = 2;
}